# sfml_base_widgets

./: CMakeLists.txt  README.md  main.cpp  sfml_base_widgets-Config.cmake
include/: BaseWidget.h  ButtonWidget.h  FontManager.h  HContainer.h  TextWidget.h
src/: BaseWidget.cc  ButtonWidget.cc  FontManager.cc  HContainer.cc  TextWidget.cc
